# ResumeAIAssistant

./: .env.example  .gitignore  .replit  .replit.workflow  .windsurfrules  AGENTS.md  API_REFERENCE.md  CLAUDE.md  CLI_README.md  DEVELOPER_GUIDE.md  OPENAI_INTEGRATION_GUIDE.md  OPENAI_INTEGRATION_STATUS.md  OPENAI_INTEGRATION_SUMMARY.md  PR_DESCRIPTION.md  PYDANTICAI_OPTIMIZER_IMPLEMENTATION.md  README.md  README_PYDANTICAI_IMPLEMENTATION.md  TASK1_SUMMARY.md  TASK2_SUMMARY.md  TASK3_SUMMARY.md  add_job_columns.py  add_job_columns_migration.py  add_timestamps_migration.py  add_username_migration.py  alembic.ini  api.workflow  api_client.ts  ats_spec.md  blueprint_prompts.md  check_db_schema.py  claude-sdk-implementation-summary.md  claude-sdk.md  claude_code_executor_enhancements.md  claude_code_output.txt  claude_code_plan.md  claude_code_resume_prompt.md  create_customization_table.py  create_test_user.py  customization_plan.md  customization_tasks.md  (+90 more)
.claude/: settings.json
attached_assets/: Pasted-Here-is-a-Product-Requirements-Document-PRD-formatted-specifically-for-an-AI-coding-assistant-like-1742587869210.txt  Pasted-INFO-172-31-128-47-41470-POST-api-v1-ats-analyze-HTTP-1-1-307-Temporary-Redirect-INFO--1742590586004.txt  Pasted-INFO-172-31-128-47-60248-POST-api-v1-ats-analyze-HTTP-1-1-307-Temporary-Redirect-INFO--1742591693155.txt
claude_prompts/: README.md  ai_model_issue_prompt.md  backend_issue_prompt.md  claude_code_system_prompt.md  frontend_issue_prompt.md  pr_review_feedback_prompt.md
demo_output/: diff_data.json  diff_output.html  diff_stats.json
evaluation/: README.md  __init__.py  baseline_analysis.py  config.py  pipeline.py  progress.py  runner_config.py  test_runner.py
frontend-next/: package.json
haiku_results/: customization_report.md  new_customized_resume.md
haiku_results_final/: customization_report.md  new_customized_resume.md
migrations/: env.py
nextjs-frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
optimized_sections/: education.md  experience.md  projects.md  skills.md  summary.md
output/: customized_resume_output.md
pydanticai_notes/: 01_overview.md  02_agent_api.md  03_evaluator_optimizer_pattern.md  04_error_handling.md  05_progress_reporting.md  06_schema_models.md  07_best_practices.md  08_tools_integration.md  09_examples_analysis.md  10_agent_configuration.md  11_dependency_injection.md  12_streaming_implementation.md  13_validation_and_self_correction.md  14_tracing_and_observability.md
results_haiku_final/: customization_report.md  new_customized_resume.md
results_haiku_improved/: customization_report.md  new_customized_resume.md
results_haiku_refined/: customization_report.md  new_customized_resume.md
scripts/: demo_smart_request.py  test_diagnostics.py  (+3 more)
(+307 files in other folders)
