[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12.3"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "markdown>=3.7",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.10.6",
    "python-docx>=1.1.2",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
    "xhtml2pdf>=0.2.17",
    "trafilatura>=2.0.0",
    "requests>=2.32.3",
    "logfire[fastapi,httpx,sqlalchemy,system-metrics]>=3.14.0",
    "psutil>=5.9.6",
    "websockets>=15.0.1",
    "beautifulsoup4>=4.13.4",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
