[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12.3"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "markdown>=3.7",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.10.6",
    "python-docx>=1.1.2",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
    "xhtml2pdf>=0.2.17",
    "trafilatura>=2.0.0",
    "requests>=2.32.3",
    "logfire[fastapi,httpx,sqlalchemy,system-metrics]>=3.14.0",
    "psutil>=5.9.6",
    "websockets>=15.0.1",
    "beautifulsoup4>=4.13.4",
    "pytest>=8.3.5",
    "jinja2>=3.1.6",
    "click>=8.1.8",
    "anthropic>=0.52.1",
    "pydantic-ai>=0.0.14",
    "pytest-asyncio>=0.24.0",
    "pyyaml>=6.0.1",
    "aiofiles>=24.1.0",
    "spacy>=3.8.7",
    "scikit-learn>=1.6.1",
    "nltk>=3.9.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
